rgbds-0.6.1/test/asm/block-comment-termination-error.simple.err
error: block-comment-termination-error.asm(1):
    Unterminated block comment
error: block-comment-termination-error.asm(1):
    syntax error
error: Assembly aborted (2 errors)!
